--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,25 @@
 <resources>
     <string name="app_name">WatsTheWeather</string>
     <string name="action_settings">Settings</string>
+    <string name="action_add_city">Add City</string>
+
+    <string name="txt_place">Place</string>
+    <string name="txt_condition">Condition</string>
+    <string name="src_imv_condition">Condition</string>
+    <string name="txt_temp">Temperature</string>
+    <string name="txt_humidity">Humidity</string>
+    <string name="title_activity_weather">WatsTheWeather</string>
+    <string name="navigation_drawer_open">Open navigation drawer</string>
+    <string name="navigation_drawer_close">Close navigation drawer</string>
+    <string name="nav_header_title">Welcome User</string>
+    <string name="nav_header_desc">User</string>
+
+    <string name="menu_weather">Weather</string>
+    <string name="menu_share">Share</string>
+    <string name="btn_enter_city">Get Weather</string>
+    <string name="txt_enter_city_hint">Enter city like London,UK</string>
+
+    <string name="city">Hello blank fragment</string>
+    <string name="places_list_activity">Places List</string>
+    <string name="title_activity_places_search">PlacesSearchActivity</string>
 </resources>
